--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Index Page</title>
   </head>
-  <body></body>
+  <body>
+    <a href="./Torus.html">Go to Torus Page</a>
+    <a href="./TorusKnot.html">Go to TorusKnot Page</a>
+  </body>
 </html>
