--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <title>Index Page</title>
   </head>
   <body>
-    <a href="./Torus.html">Go to Torus Page</a>
-    <a href="./TorusKnot.html">Go to TorusKnot Page</a>
+    <div style="text-align: center">
+      <h1>22-1 Computer Graphics Final Project</h1>
+      <h2>Dept.of Software 하주헌 201720801</h2>
+    </div>
+    <div style="font-size: 24px; text-align: center">
+      <a href="./Torus.html">Go to Torus Page</a>
+      <br />
+      <a href="./TorusKnot.html">Go to TorusKnot Page</a>
+    </div>
   </body>
 </html>
