--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div style="text-align: center">
       <h1>22-1 Computer Graphics Final Project</h1>
-      <h2>Dept.of Software 하주헌 201720801</h2>
+      <h2>Dept.of Software 하주헌 - 201720801</h2>
     </div>
     <div style="font-size: 24px; text-align: center">
       <a href="./Torus.html">Go to Torus Page</a>
