--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
   <body>
     <div style="text-align: center">
       <h1>22-1 Computer Graphics Final Project</h1>
-      <h2>Dept.of Software 하주헌 - 201720801</h2>
+      <h2>Three.js - Torus(Knot)</h2>
+      <h2>Dept.of Software in Ajou Univ.</h2>
+      <h2>하주헌 - 201720801</h2>
     </div>
     <div style="font-size: 24px; text-align: center">
       <a href="./Torus.html">Go to Torus Page</a>
       <br />
       <a href="./TorusKnot.html">Go to TorusKnot Page</a>
+      <br />
     </div>
   </body>
 </html>
