--- a/Torus.html
+++ b/Torus.html
@@ -152,11 +152,11 @@
         <h2>3. Let's make Saturn using Torus (토성 만들기)</h2>
         <h2>3-1. Find a Saturn Image (적당한 토성 이미지 찾기)</h2>
         <div class="desc">
-          <img src="/img/saturn.gif" width="800" height="600" />
+          <p>고리가 잘 나타나있는 토성 이미지를 찾는다</p>
+          <img src="/img/saturn.gif" width="600" height="450" />
         </div>
         <h2>3-2. Seperate into basic elemnents (여러 요소로 분리하기)</h2>
         <div class="desc">
-          <img src="/img/saturn2.gif" width="800" height="600" />
           <div>
             다음과 같이 총 4개로 토성을 구성할 것이다.
             <ol>
@@ -166,8 +166,9 @@
               <li>토성의 본체 -> sphere</li>
             </ol>
           </div>
+          <img src="/img/saturn2.gif" width="600" height="450" />
         </div>
-        <h2>3-3. Rendering Ring(Torus)</h2>
+        <h2>3-3. Rendering Ring(토성의 고리 렌더링)</h2>
         <div class="desc">
           <div class="codeDiv">
             <code>
@@ -207,8 +208,10 @@
           <img src="img/saturn4.png" width="400" height="300" />
         </div>
         <h2>3-5. Texture Mapping on Body (토성의 몸체에 텍스쳐매핑 하기)</h2>
-        <div>적당한 토성 텍스쳐 찾기</div>
-        <img src="img/saturn_texture.jpg" width="400" height="300" />
+        <div class="desc">
+          <div>적당한 토성 텍스쳐 찾기</div>
+          <img src="img/saturn_texture.jpg" width="400" height="300" />
+        </div>
         <div class="desc">
           <div class="codeDiv">
             <code>
