--- a/Torus.html
+++ b/Torus.html
@@ -126,6 +126,10 @@
       <div class="chapter">
         <h2>2. Let's make a Donut using texture mapping</h2>
         <div class="desc">
+          <div>적당한 도넛 텍스쳐를 찾아서 torus의 texture에 입혀준다</div>
+          <img src="/img/donut.jpeg" />
+        </div>
+        <div class="desc">
           <div class="codeDiv">
             <code
               >const donutGeo = new THREE.TorusGeometry(0.7, 0.3, 100, 120);<br />
