--- a/Torus.html
+++ b/Torus.html
@@ -6,7 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./style.css" />
     <script type="text/javascript" src="js/three.js"></script>
-    <title>Torus</title>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script
+      id="MathJax-script"
+      async
+      src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"
+    ></script>
+    <title>CG Project - Torus</title>
   </head>
 
   <body>
@@ -20,6 +26,40 @@
         <a href="./index.html">Go To Index Page</a><br />
         <a href="./TorusKnot.html">Go To TorusKnot Page</a>
       </nav>
+      <div class="chapter">
+        <h2>0. About Torus</h2>
+        <div class="desc">
+          <p style="font-size: 20px">
+            Torus를 사전에서 찾아보면 원환면이라고 부른다. torus의 어원은
+            라틴어로 쿠션, 소파를 뜻하는 tŏrus에서 파생되었다. 원을 3차원
+            공간상에서 원을 포함하는 평면 위의 직선을 축으로 회전하여 만든
+            회전면이다. 원환면을 표면으로 하는 입체는 도넛의 모양을 닮게 되는데
+            이를 원환체 또는 toroid라고 한다. 여기서 원(circle)이랑 순수하게
+            테두리 위의 점들의 집합만 지칭하고, 원 내부의 점들은 포함하지 않기
+            때문에 원을 회전시켜서 만들어진 torus는 내부가 비어있다고 가정해야
+            한다. 만약 내부가 꽉 차있는 도형을 만들고 싶다면, 원의 내부면적을
+            모두 포함하는 'disk'를 회전시켜야 하며, 이렇게 생성된 도형은 'solid
+            torus'라고 부른다.<br /><br />
+            torus를 매개변수 식으로 표현하면 아래와 같이 나타낼 수 있다. <br />
+            
+            <img src="https://latex.codecogs.com/svg.image?\LARGE&space;x(u,v)=(R&plus;r\cos&space;{v})\cos&space;{u}\" title="https://latex.codecogs.com/svg.image?\LARGE x(u,v)=(R+r\cos {v})\cos {u}\" /><br/>
+            <img src="https://latex.codecogs.com/svg.image?\LARGE&space;y(u,v)=(R&plus;r\cos&space;{v})\sin&space;{u}\" title="https://latex.codecogs.com/svg.image?\LARGE y(u,v)=(R+r\cos {v})\sin {u}\" /><br/>
+            <img src="https://latex.codecogs.com/svg.image?\LARGE&space;z(u,v)=&space;r&space;sin\&space;{v}" title="https://latex.codecogs.com/svg.image?\LARGE z(u,v)= r sin\ {v}" />
+            <br>
+            여기서 각 변수의 범위와 의미는 다음과 같다.<br/><br/>
+            <img src="https://latex.codecogs.com/svg.image?\large&space;u,v" title="https://latex.codecogs.com/svg.image?\large u,v" />
+            는 구간 
+            <img src="https://latex.codecogs.com/svg.image?\large&space;[0,2\pi&space;)" title="https://latex.codecogs.com/svg.image?\large [0,2\pi )" />
+            의 원소이다.<br>
+            
+            <img src="https://latex.codecogs.com/svg.image?\large&space;R" title="https://latex.codecogs.com/svg.image?\large R" />
+            은 원환면의 중심에서 튜브의 중심까지의 거리이다.<br/>
+            <img src="https://latex.codecogs.com/svg.image?\large&space;r" title="https://latex.codecogs.com/svg.image?\large r" />
+            은 튜브 단면의 반지름이다.
+          </p>
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/17/Torus.png/440px-Torus.png">
+        </div>
+      </div>
       <div class="chapter">
         <h2>1. Initialization of Torus</h2>
         <div class="desc">
@@ -261,6 +301,7 @@
         <p>
           https://velog.io/@mh0223/Three.js-%EC%A7%80%EC%98%A4%EB%A9%94%ED%8A%B8%EB%A6%ACGeometry
         </p>
+        <p>https://ko.wikipedia.org/wiki/%EC%9B%90%ED%99%98%EB%A9%B4</p>
       </div>
     </footer>
     <script type="text/javascript" src="js/torus.js"></script>
