--- a/TorusKnot.html
+++ b/TorusKnot.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./style.css" />
     <script type="text/javascript" src="js/three.js"></script>
-    <title>TorusKnot</title>
+    <title>CG Project - TorusKnot</title>
   </head>
 
   <body>
