--- a/Torus.html
+++ b/Torus.html
@@ -30,9 +30,9 @@
         <h2>0. About Torus</h2>
         <div class="desc">
           <p style="font-size: 20px">
-            Torus를 사전에서 찾아보면 원환면이라고 부른다. torus의 어원은
-            라틴어로 쿠션, 소파를 뜻하는 tŏrus에서 파생되었다. 원을 3차원
-            공간상에서 원을 포함하는 평면 위의 직선을 축으로 회전하여 만든
+            torus의 어원은 라틴어로 쿠션, 소파를 뜻하는 tŏrus에서 파생되었으며 
+            사전에서는 원환면이라고 부른다. 원을 3차원 공간상에서 원을 포함하는 
+            평면 위의 직선을 축으로 회전하여 만든
             회전면이다. 원환면을 표면으로 하는 입체는 도넛의 모양을 닮게 되는데
             이를 원환체 또는 toroid라고 한다. 여기서 원(circle)이랑 순수하게
             테두리 위의 점들의 집합만 지칭하고, 원 내부의 점들은 포함하지 않기
