--- a/Torus.html
+++ b/Torus.html
@@ -284,7 +284,24 @@
         <span id="saturn_out"></span>
       </div>
     </div>
-
+    <div id="chapter">
+      <h2>4. Let's make Rubber Duck Tube (러버덕으로 튜브를 만들어 보기)</h2>
+      <h2>4-1. Find a Rubber Duck image</h2>
+      <div class="desc">
+        <p>적당한 러버덕 이미지를 찾는다</p>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/14/Rubber_Duck_%288374802487%29.jpg/440px-Rubber_Duck_%288374802487%29.jpg">
+      </div>
+      <h2>4-2. Seperate into basic elements </h2>
+      <div class="desc">
+        <p>오리의 몸체는 가운데가 빈 Torus로, 오리의 머리는 Sphere로 하고, 노란색 배경에 눈이 그려진 texture를 매핑한다. 머리의 일부분은 오리의 몸체에 파묻는다. 그리고 오리의 부리는 다시 Torus로 만든다.</p>
+        <img src="/img/duck2.jpeg">
+      </div>
+      <h2>4-3. Final result </h2>
+      <div class="desc">
+        <p></p>
+        <canvas id="rubberDuckCanvas"></canvas>
+      </div>
+    </div>
     <hr />
     <footer>
       <div>
@@ -294,6 +311,9 @@
         </p>
         <p>
           https://media.istockphoto.com/vectors/chocolate-flow-on-the-pink-seamless-donut-texture-vector-id821527352
+        </p>
+        <p>
+          https://en.wikipedia.org/wiki/Rubber_duck
         </p>
       </div>
       <div>
@@ -307,5 +327,6 @@
     <script type="text/javascript" src="js/torus.js"></script>
     <script type="text/javascript" src="js/donut.js"></script>
     <script type="text/javascript" src="js/saturn.js"></script>
+    <script type="text/javascript" src="js/rubberDuck.js"></script>
   </body>
 </html>
