--- a/TorusKnot.html
+++ b/TorusKnot.html
@@ -20,6 +20,22 @@
         <a href="./Torus.html">Go To Torus Page</a>
       </nav>
       <div class="chapter">
+        <h2>0. About TorusKnot</h2>
+        <div class="desc">
+          <p style="font-size: 20px">
+            매듭 이론에서, 원환면 연환은 원환면(torus)위에 간단하게 그려질 수
+            있는 연환(매듭)이다. <br /><br />
+            원환면은 다음과 같이 감는다.<br />
+            1. z축에 대하여 p번 감기<br />
+            2. 원환면의 중심에 있는 원에 대하여 q번 감기<br />
+            그리하여 p=3,q=2인 torus knot은 오른쪽 그림과 같이 나온다.
+          </p>
+          <img
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/04/TrefoilKnot_01.svg/240px-TrefoilKnot_01.svg.png"
+          />
+        </div>
+      </div>
+      <div class="chapter">
         <h2>1. Initialization of TorusKnot</h2>
         <div class="desc">
           <div class="codeDiv">
@@ -131,21 +147,7 @@
           </div>
         </div>
       </div>
-      <div class="chapter">
-        <h2>2. About p and q</h2>
-        <div class="desc">
-          <ul>
-            <li>
-              p와 q는 서로소여야 한다. 서로소가 아니라면 약분한 결과로
-              렌더링된다.
-            </li>
-            <li>.</li>
-          </ul>
-          <!-- <canvas id="Canvas2"></canvas> -->
-        </div>
-        <div></div>
-      </div>
-    </div>
+     
     <script type="text/javascript" src="js/torusknot.js"></script>
   </body>
 </html>
