--- a/Torus.html
+++ b/Torus.html
@@ -168,7 +168,7 @@
         <h2>2. Let's make a Donut using texture mapping</h2>
         <div class="desc">
           <div>적당한 도넛 텍스쳐를 찾아서 torus의 texture에 입혀준다</div>
-          <img src="/img/donut.jpeg" />
+          <img src="./img/donut.jpeg" />
         </div>
         <div class="desc">
           <div class="codeDiv">
@@ -199,7 +199,7 @@
         <h2>3-1. Find a Saturn Image (적당한 토성 이미지 찾기)</h2>
         <div class="desc">
           <p>고리가 잘 나타나있는 토성 이미지를 찾는다</p>
-          <img src="/img/saturn.gif" width="600" height="450" />
+          <img src="./img/saturn.gif" width="600" height="450" />
         </div>
         <h2>3-2. Seperate into basic elemnents (여러 요소로 분리하기)</h2>
         <div class="desc">
@@ -212,7 +212,7 @@
               <li>토성의 본체 -> sphere</li>
             </ol>
           </div>
-          <img src="/img/saturn2.gif" width="600" height="450" />
+          <img src="./img/saturn2.gif" width="600" height="450" />
         </div>
         <h2>3-3. Rendering Ring(토성의 고리 렌더링)</h2>
         <div class="desc">
@@ -232,7 +232,7 @@
               const ring3 = new THREE.Mesh(geometry3, material3);
             </code>
           </div>
-          <img src="img/saturn3.png" width="400" height="300" />
+          <img src="./img/saturn3.png" width="400" height="300" />
           <p>
             고리 3개가 서로 맞닿게 하기 위해서는 아래 수식을 만족해야 한다.<br />
             <code style="font-size: 14px">
@@ -251,12 +251,12 @@
               const saturn = new THREE.Mesh(sphereGeo, saturnMaterial);
             </code>
           </div>
-          <img src="img/saturn4.png" width="400" height="300" />
+          <img src="./img/saturn4.png" width="400" height="300" />
         </div>
         <h2>3-5. Texture Mapping on Body (토성의 몸체에 텍스쳐매핑 하기)</h2>
         <div class="desc">
           <div>적당한 토성 텍스쳐 찾기</div>
-          <img src="img/saturn_texture.jpg" width="400" height="300" />
+          <img src="./img/saturn_texture.jpg" width="400" height="300" />
         </div>
         <div class="desc">
           <div class="codeDiv">
