--- a/Torus.html
+++ b/Torus.html
@@ -168,7 +168,7 @@
         <h2>2. Let's make a Donut using texture mapping</h2>
         <div class="desc">
           <div>적당한 도넛 텍스쳐를 찾아서 torus의 texture에 입혀준다</div>
-          <img src="./img/donut.jpeg" />
+          <img src="https://github.com/hjhj97/22-1_CG_Tutorial/blob/main/img/donut.jpeg?raw=true" />
         </div>
         <div class="desc">
           <div class="codeDiv">
