--- a/Torus.html
+++ b/Torus.html
@@ -315,7 +315,7 @@
               duck.add(duckBeak);
             </code>
           </div>
-          <img src="/img/duck2.jpeg" />
+          <img src="https://github.com/hjhj97/22-1_CG_Tutorial/blob/main/img/duck2.jpeg?raw=true" />
         </div>
         <h2>4-3. Final result</h2>
         <div class="desc">
